--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -84,7 +84,7 @@
           Name: Prod Internet gateway
       register: igw_out
     - name: Set up public subnet route table
-      amazon.aws.ec2_vpc_route_table:
+      ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         tags:
