--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -82,7 +82,7 @@
         region: "{{region}}"
         tags:
           Name: Prod Internet gateway
-      register: igw_out
+      register: igw
     - name: Set up public subnet route table
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
@@ -95,7 +95,7 @@
           - "{{ pubsub3_out.subnet_id }}"
         routes:
           - dest: 0.0.0.0/0
-            gateway_id: "{{ igw_out.gateway_id }}"
+            gateway_id: "{{ igw.gateway_id }}"
           - dest: ::/0
-            gateway_id: "{{ igw_out.gateway_id }}"
+            gateway_id: "{{ igw.gateway_id }}"
       register: public_route_table
